typescript/checker/tests/conformance/async/es6/awaitBinaryExpression/awaitBinaryExpression2_es6.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es6/awaitBinaryExpression/awaitBinaryExpression2_es6.ts
  --> $DIR/tests/conformance/async/es6/awaitBinaryExpression/awaitBinaryExpression2_es6.ts:7:1
   |
7  | / async function func(): Promise<void> {
8  | |     before();
9  | |     var b = await p && a;
10 | |     after();
11 | | }
   | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            183,
        ),
        hi: BytePos(
            198,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/awaitBinaryExpression/awaitBinaryExpression2_es6.ts:7:22
  |
7 | async function func(): Promise<void> {
  |                      ^^^^^^^^^^^^^^^

